# ran-online

./: .gitignore
.github/workflows/: build-foundation.yml
docs/: 00_design_pillars.md  01_architecture_overview.md  03_database_schema.md  04_network_protocol.md  05_cloud_native_roadmap.md  06_master_plan.md  07_ai_delivery_operating_model.md  08_source_tree_map.md  09_gm_commands.md  HANDOVER.md
docs/02_server_components/: agent_server.md  field_server.md  login_server.md  session_server.md
docs/adr/: ADR-001-cloud-native-vs-rejuvenation.md  ADR-007-polyglot-language-strategy.md
docs/future_enhancements/: banking_grade_ledger.md  central_market.md  insider_fraud_prevention.md
docs/runbooks/: agent-login-handler.md  asio-spike.md  auth-cert-crypto.md  auth-cert-flow.md  build-foundation.md  db-layer-port.md  db-restore.md  msodbcsql-spike.md  net-packet-layer.md  server-fanout-authserver.md  server-fanout-remaining.md
ranserver-linux/: CMakeLists.txt  Dockerfile.dev  Makefile  README.md
ranserver-linux/db/: db_param_smoke.cpp  db_smoke.cpp  odbc_db.cpp  odbc_db.h
ranserver-linux/net/: lzo_smoke.cpp  minlzo.cpp  minlzo.h  msg_manager.h  msgpack_min.cpp  msgpack_min.h  msgpack_min_smoke.cpp  net_server.cpp  net_server.h  packet.cpp  packet.h  packet_smoke.cpp  send_msg_buffer.cpp  send_msg_buffer.h  session.cpp  session.h
ranserver-linux/platform/: win32_compat.h
ranserver-linux/servers/agentserver/: agent_server.cpp  agent_server.h  agent_server_msg.h  agentserver_smoke.cpp  char_lobby.h  main.cpp
ranserver-linux/servers/authserver/: auth_crypto.cpp  auth_crypto.h  auth_server.cpp  auth_server.h  auth_server_msg.h  authserver_smoke.cpp  main.cpp
ranserver-linux/servers/fieldserver/: field_server.cpp  field_server.h  fieldserver_smoke.cpp  main.cpp
ranserver-linux/servers/loginserver/: login_server.cpp  login_server.h  loginserver_smoke.cpp  main.cpp
ranserver-linux/servers/sessionserver/: main.cpp  session_server.cpp  session_server.h  sessionserver_smoke.cpp
ranserver-linux/src/: foundation_smoke.cpp
